# py_microservices_template

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  settings.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
server/: app.py  manage.py  run.py
server/api_1_0/: api.py  decorators.py  enums.py
server/api_1_0/common/: resources.py  schema.py
server/api_1_0/common/consumers/: queues.py
server/api_1_0/users/: models.py  resources.py
server/migrations/versions/: c20ccdc8e870_create_common_table.py
tests/: conftest.py
